--- a/4_Housing.Rmd
+++ b/4_Housing.Rmd
@@ -1,22 +1,516 @@
 ---
-title: "Denmark: Housing Prices"
+title: "Denmark: Housing Market Supply"
 author: "CAKU"
 date: "`r Sys.Date()`"
 output: html_document
 ---
 
-```{r housepricesrkr,include=FALSE}
+```{r housingmarketsupply,include=FALSE}
 knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE)
 options(scipen=999)
+
+```
+
+```{r }
+if (!require(pacman)) { install.packages("pacman") }
+pacman::p_load(tidyr,
+               dplyr,
+               ggplot2,
+               boot,
+               openxlsx,
+               lubridate,
+               forcats,
+               broom,
+               purrr,
+               caret,
+               glue,
+               devtools,
+               TTR,
+               dkstat,
+               httr,
+               rvest,
+               zoo,
+               rvest)
+source(file = "money_theme.R")
+
+
+```
+
+```{r}
+loess_adjust = function(data) {
+  
+  # grid <- expand.grid(span = seq(0.1, 0.5, len = 5), degree = c(1))
+  # fit_gam = suppressWarnings(expr =  { train(y = data$VALUE, 
+  #       x = data %>% dplyr::select(DATE),
+  #       tuneGrid=grid,
+  #       method = "gamLoess") })
+  
+  
+  fit_smooth = smooth.spline(x = data$DATE, 
+                             y = data$VALUE, 
+                             all.knots = TRUE, 
+                             control.spar = list(low = -2, hight = 2))
+  
+  data %>% 
+    dplyr::mutate(VALUE=fit_smooth$y) %>% 
+    dplyr::mutate(VALUE=scale(VALUE,center=TRUE,scale=TRUE)) %>%
+    dplyr::mutate(ema=TTR::EMA(VALUE,9))
+  
+}
+```
+
+# Denmark Housing Supply
+
+
+```{r}
+df_udbud =
+  openxlsx::read.xlsx(xlsxFile = "Data/UDB010.xlsx",startRow = 3) %>% 
+  dplyr::rename(SUPPLY_TYPE=X2,
+                PROPERTY_TYPE=X1,
+                ZIP=X3) %>% 
+  tidyr::fill(SUPPLY_TYPE,.direction="down") %>% 
+  tidyr::fill(PROPERTY_TYPE,.direction="down") %>% 
+  tidyr::fill(ZIP,.direction="down") %>% 
+  gather(DATE,VALUE,c(4:ncol(.))) %>% 
+  filter(!VALUE=="..") %>% 
+  dplyr::mutate(DATE=lubridate::ceiling_date(ymd(glue("{substr(DATE,1,4)}-{substr(DATE,6,7)}-01")),unit="month")-days(1)) %>% 
+  group_by(PROPERTY_TYPE,SUPPLY_TYPE,ZIP) %>%
+  do(loess_adjust(.))
+
+```
+
+```{r}
+df_udbud.change =
+  openxlsx::read.xlsx(xlsxFile = "Data/UDB010.xlsx",startRow = 3) %>% 
+  dplyr::rename(SUPPLY_TYPE=X2,
+                PROPERTY_TYPE=X1,
+                ZIP=X3) %>% 
+  tidyr::fill(SUPPLY_TYPE,.direction="down") %>% 
+  tidyr::fill(PROPERTY_TYPE,.direction="down") %>% 
+  tidyr::fill(ZIP,.direction="down") %>% 
+  gather(DATE,VALUE,c(4:ncol(.))) %>% 
+  filter(!VALUE=="..") %>% 
+  dplyr::mutate(DATE=lubridate::ceiling_date(ymd(glue("{substr(DATE,1,4)}-{substr(DATE,6,7)}-01")),unit="month")-days(1)) %>% 
+  group_by(PROPERTY_TYPE,SUPPLY_TYPE,ZIP) %>%  
+  do(loess_adjust(.)) %>% 
+  arrange(PROPERTY_TYPE,ZIP,DATE) %>% 
+  dplyr::mutate(next_period_chg=lead(VALUE)-VALUE)
+```
+
+```{r}
+
+df_udbud.bubblelow = df_udbud %>% 
+  filter(DATE>ymd("2005-01-01")) %>% 
+  filter(DATE<ymd("2008-01-01")) %>% 
+  group_by(PROPERTY_TYPE,ZIP) %>% 
+  filter(VALUE==min(VALUE)) %>% 
+  dplyr::select(PROPERTY_TYPE,ZIP,DATE)
+
+df_udbud.bubblelow.DK = 
+  df_udbud.bubblelow %>% 
+  group_by(PROPERTY_TYPE) %>% 
+  dplyr::summarise(DATE=mean(DATE))
+
+```
+
+```{r}
+
+df_udbud.covid19low = df_udbud %>% 
+  filter(DATE>ymd("2020-01-01")) %>% 
+  group_by(PROPERTY_TYPE,ZIP) %>% 
+  filter(VALUE==min(VALUE)) %>% 
+  dplyr::select(PROPERTY_TYPE,ZIP,DATE)
+
+df_udbud.covid19low.DK = 
+  df_udbud.covid19low %>% 
+  group_by(PROPERTY_TYPE) %>% 
+  dplyr::summarise(DATE=mean(DATE))
+
+```
+
+```{r}
+df.house_prices =
+  openxlsx::read.xlsx(xlsxFile = "Data/BM010.xlsx",startRow = 3) %>% 
+  rename_with(~c("PROPERTY_TYPE","SALES_TYPE","ZIP"),1:3) %>% 
+  tidyr::fill(PROPERTY_TYPE,.direction="down") %>% 
+  tidyr::fill(SALES_TYPE,.direction="down") %>% 
+  gather(DATE,VALUE,c(4:ncol(.))) %>% 
+  filter(!VALUE=="..") %>% 
+  dplyr::mutate(VALUE=as.integer(VALUE)) %>% 
+  dplyr::mutate(DATE=lubridate::ceiling_date(as.Date(as.yearqtr(DATE, format = "%YK%q")),"quarters")-days(1)) %>% 
+  group_by(PROPERTY_TYPE,SALES_TYPE,ZIP) %>% 
+  # do(loess_adjust(.)) %>% 
+  dplyr::mutate(PROPERTY_TYPE=recode(PROPERTY_TYPE, 'HOUSE'='Parcel-/rækkehuse', 'FLAT'='Ejerlejlighed'))
+
+```
+
+```{r}
+
+df_liggetider =
+  openxlsx::read.xlsx(xlsxFile = "Data/UDB030.xlsx",startRow = 3) %>% 
+  dplyr::rename(STAT=X2,
+                PROPERTY_TYPE=X1,
+                ZIP=X3) %>% 
+  tidyr::fill(STAT,.direction="down") %>% 
+  tidyr::fill(PROPERTY_TYPE,.direction="down") %>% 
+  filter(STAT=="Liggetider (dage)") %>% 
+  gather(DATE,VALUE,c(4:ncol(.))) %>% 
+  filter(!VALUE=="..") %>% 
+  group_by(PROPERTY_TYPE,STAT,ZIP) %>% 
+  dplyr::mutate(INDEX=scale(VALUE,center = TRUE,scale = TRUE)) %>% 
+  dplyr::mutate(DATE=lubridate::ceiling_date(ymd(glue("{substr(DATE,1,4)}-{substr(DATE,6,7)}-01")),unit="month")-days(1))
+
+```
+
+
+```{r }
+
+BYGV80_meta <- dst_meta(table = "BYGV80", lang = "da")
+BYGV80 <- dst_get_data(table = "BYGV80", 
+                       BYGFASE="*",
+                       ANVENDELSE="*",
+                       Tid="*",
+                       lang = "da")
+df_BYGV80 = 
+  BYGV80 %>% 
+  group_by(BYGFASE,ANVENDELSE) %>% 
+  arrange(BYGFASE,ANVENDELSE,TID) %>% 
+  filter(ANVENDELSE %in% c("Etageboliger","Parcelhuse")) %>% 
+  dplyr::mutate(ANVENDELSE=gsub("Etageboliger","FLAT",ANVENDELSE)) %>% 
+  dplyr::mutate(ANVENDELSE=gsub("Parcelhuse","HOUSE",ANVENDELSE)) %>% 
+  dplyr::rename(PROPERTY_TYPE=ANVENDELSE) %>% 
+  dplyr::rename(STAT=BYGFASE) %>% 
+  dplyr::rename(DATE=TID) %>% 
+  dplyr::rename(VALUE=value) %>% 
+  group_by(PROPERTY_TYPE,STAT) %>% 
+  dplyr::mutate(PROPERTY_TYPE=recode(PROPERTY_TYPE, 'HOUSE'='Parcel-/rækkehuse', 'FLAT'='Ejerlejlighed')) %>% 
+  dplyr::mutate(INDEX=scale(VALUE,center = TRUE,scale = TRUE)) %>% 
+  na.omit()
+
+```
+
+
+```{r}
+
+source_url = "https://finansdanmark.dk/tal-og-data/boligstatistik/obligationsrenter/"
+current_url = xml2::read_html(source_url) %>%
+  html_node("body > main > div > div.page-header > div.page-header__content > div > div.row > div.col-12.col-md-8 > div > p:nth-child(11) > a") %>% 
+  rvest::html_attr("href")
+xlsx_url = paste0("https://finansdanmark.dk/",current_url)
+
+df_interest = openxlsx::read.xlsx(xlsxFile = xlsx_url,startRow = 1)
+df_interest$År[1] = 1997
+df_interest = df_interest %>% fill(År,.direction = "down")
+
+df_interest$Date = as.Date(paste(df_interest$År, df_interest$Uge, 1, sep="-"), "%Y-%U-%u")
+df_interest = df_interest %>% 
+  dplyr::select(Date,Kort.rente,Lang.rente) %>% 
+  dplyr::mutate( CurveLongShort = Lang.rente - Kort.rente ) %>% 
+  gather(STAT,VALUE,Kort.rente:CurveLongShort) %>% 
+  # dplyr::mutate(VALUE=TTR::RSI(VALUE,n=14)) %>% 
+  dplyr::mutate(INDEX=scale(VALUE,center = TRUE,scale = TRUE)) %>% 
+  dplyr::rename(DATE=Date)
+```
+
+
+```{r}
+
+df.adjustments = 
+  openxlsx::read.xlsx(xlsxFile = "Data/BM010.xlsx",startRow = 3) %>% 
+  rename_with(~c("PROPERTY_TYPE","SALES_TYPE","ZIP"),1:3) %>% 
+  tidyr::fill(PROPERTY_TYPE,.direction="down") %>% 
+  tidyr::fill(SALES_TYPE,.direction="down") %>% 
+  tidyr::fill(ZIP,.direction="down") %>% 
+  gather(DATE,VALUE,c(4:ncol(.))) %>% 
+  filter(!VALUE=="..") %>% 
+  dplyr::mutate(VALUE=as.integer(VALUE)) %>% 
+  unite(SALES_TYPE,SALES_TYPE,PROPERTY_TYPE) %>% 
+  spread(SALES_TYPE,VALUE) %>% 
+  dplyr::mutate(ADJUST_HOUSE=(`Realiseret handelspris_Parcel-/rækkehus`/`Første udbudspris_Parcel-/rækkehus`)-1) %>% 
+  # dplyr::mutate(ADJUST_FLAT=(`Realiseret handelspris_FLAT`/`Første udbudspris_FLAT`)-1) %>% 
+  dplyr::select(ZIP,DATE,ADJUST_HOUSE) %>% 
+  gather(ADJUST_TYPE,VALUE,ADJUST_HOUSE) %>% 
+  na.omit() %>% 
+  separate(ADJUST_TYPE,into=c("STAT","PROPERTY_TYPE")) %>% 
+  dplyr::mutate(DATE=lubridate::ceiling_date(as.Date(as.yearqtr(DATE, format = "%YK%q")),"quarters")-days(1)) %>% 
+  dplyr::mutate(PROPERTY_TYPE=recode(PROPERTY_TYPE, 'HOUSE'='Parcel-/rækkehuse', 'FLAT'='Ejerlejlighed')) %>% 
+  group_by(PROPERTY_TYPE,STAT,ZIP) %>% 
+  dplyr::mutate(INDEX=scale(VALUE,center = TRUE,scale = TRUE)) 
+
+```
+
+
+### All time development
+
+```{r}
+
+df.adjustments %>% 
+  bind_rows( df.house_prices ) %>% 
+  bind_rows( df_liggetider ) %>% 
+  bind_rows( df_interest ) %>% 
+  bind_rows( df_BYGV80 ) %>% 
+  ggplot(.,aes(x=DATE,y=INDEX,color=STAT)) +
+  geom_smooth(fill=NA,span=0.03) +
+  facet_wrap(~PROPERTY_TYPE,ncol=1) +
+  geom_smooth(data=df_udbud,aes(x=DATE,y=VALUE),color="blue",linetype=2)  +
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y") + 
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
+  theme(legend.position="bottom") +
+  geom_vline(data=df_udbud.covid19low.DK,aes(xintercept=DATE)) +
+  geom_vline(data=df_udbud.bubblelow.DK,aes(xintercept=DATE)) +
+  geom_hline(yintercept = 0) +
+  theme_money_printer_go_brrr(base_size=12) 
+```
+
+```{r}
+
+df_BYGV80 %>% 
+  ggplot(.,aes(x=DATE,y=INDEX,color=STAT)) +
+  geom_line(color="gray30") +
+  geom_smooth(fill=NA) +
+  facet_wrap(~PROPERTY_TYPE,ncol=1) +
+  geom_smooth(data=df_udbud,aes(x=DATE,y=VALUE),color="blue",linetype=2)  +
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y",limits=c(dmy("2004-01-01"),dmy("2008-01-01"))) + 
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
+  theme(legend.position="bottom") +
+  geom_vline(data=df_udbud.covid19low.DK,aes(xintercept=DATE)) +
+  geom_vline(data=df_udbud.bubblelow.DK,aes(xintercept=DATE)) +
+  geom_hline(yintercept = 0)  +
+  theme_money_printer_go_brrr(base_size=12) 
+
+```
+
+```{r}
+ggplot(df_udbud,aes(x=DATE,y=VALUE,color=ZIP)) +
+  geom_line(alpha=0.3) +
+  facet_wrap(~PROPERTY_TYPE) +
+  theme_money_printer_go_brrr(base_size=12) 
+```
+### COVID 19 lows
+
+```{r}
+ggplot(df_udbud,aes(x=DATE,y=VALUE,color=ZIP)) +
+  geom_line(alpha=0.3) +
+  facet_wrap(~PROPERTY_TYPE)  +
+  scale_x_date(limits=c(ymd("2020-01-01"),NA),date_labels = "%b",date_breaks = "3 months")  +
+  geom_vline(data=df_udbud.covid19low,aes(xintercept=DATE,color=ZIP),linetype=2,alpha=0.7) +
+  theme_money_printer_go_brrr(base_size=12) 
+```
+
+### Bubble lows
+
+```{r}
+ggplot(df_udbud,aes(x=DATE,y=VALUE,color=ZIP)) +
+  geom_line(alpha=0.3) +
+  facet_wrap(~PROPERTY_TYPE)  +
+  scale_x_date(limits=c(ymd("2005-01-01"),ymd("2008-01-01")))  +
+  geom_vline(data=df_udbud.bubblelow,aes(xintercept=DATE,color=ZIP),linetype=2,alpha=0.7) +
+  theme_money_printer_go_brrr(base_size=12) 
+```
+
+# Byggekonjunktur
+
+```{r }
+BYGV80_meta <- dst_meta(table = "BYGV80", lang = "da")
+BYGV80 <- dst_get_data(table = "BYGV80", 
+                       BYGFASE="*",
+                       ANVENDELSE="*",
+                       Tid="*",
+                       lang = "da")
+
+BYGV80 = BYGV80 %>% 
+  filter(ANVENDELSE %in% c("Parcelhuse","Etageboliger")) %>% 
+  dplyr::mutate(BYGFASE=factor(BYGFASE,levels=c("Tilladt byggeri","Påbegyndt byggeri","Byggeri under opførelse","Fuldført byggeri"))) %>% 
+  group_by(BYGFASE,ANVENDELSE) %>%
+  group_by(BYGFASE,ANVENDELSE) %>%
+  dplyr::mutate(value=scale(value,center=TRUE,scale=TRUE)) %>% 
+  dplyr::mutate(ema=TTR::EMA(value,n=9)) %>% 
+  ungroup() %>% 
+  arrange(BYGFASE,ANVENDELSE,TID) %>% 
+  filter(TID>=ymd("2000-01-01"))
+
+```
+
+## Flats
+
+```{r fig.height=15,fig.width=10 }
+
+BYGV80 %>% 
+  filter(ANVENDELSE == "Etageboliger") %>% 
+  ggplot(.,aes(x=TID,y=value,color=BYGFASE)) +
+  geom_point() +
+  geom_line(aes(x=TID,y=ema),linetype=2,color="black") +
+  scale_x_date(date_breaks = "2 year",date_labels = "%Y") +
+  theme(legend.position = "bottom") +
+  facet_wrap(~BYGFASE,scales = "free",ncol=1) +
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  theme(legend.position = "bottom") +
+  labs(title="Parcelhuse") +
+  geom_hline(yintercept = 0) +
+  geom_vline(xintercept = c(ymd("2005-04-01","2021-01-01"))) +
+  geom_vline(xintercept = c(ymd("2006-06-01","2022-03-31")),linetype=3) +
+  theme_money_printer_go_brrr(base_size=12) +
+  labs(title="Denmark: Flats Construction",
+       x=NULL,
+       y="(SD)",
+       caption = timestamp_caption())
+
+```
+
+```{r fig.height=15,fig.width=10 }
+
+BYGV80 %>% 
+  filter(ANVENDELSE == "Parcelhuse") %>% 
+  ggplot(.,aes(x=TID,y=value,color=BYGFASE)) +
+  geom_point() +
+  geom_line(aes(x=TID,y=ema),linetype=2,color="black") +
+  scale_x_date(date_breaks = "2 year",date_labels = "%Y") +
+  theme(legend.position = "bottom") +
+  facet_wrap(~BYGFASE,scales = "free",ncol=1) +
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  theme(legend.position = "bottom") +
+  labs(title="Parcelhuse") +
+  geom_hline(yintercept = 0) +
+  geom_vline(xintercept = c(ymd("2005-04-01","2021-01-01"))) +
+  geom_vline(xintercept = c(ymd("2006-06-01","2022-03-31")),linetype=3) +
+  theme_money_printer_go_brrr(base_size=12) +
+  labs(title="Denmark: Houses Construction",
+       x=NULL,
+       y="(SD)",
+       caption = timestamp_caption())
+
+```
+
+
+## Rolling sums of changes
+
+```{r fig.height=15,fig.width=10 }
+BYGV80_meta <- dst_meta(table = "BYGV80", lang = "da")
+BYGV80 <- dst_get_data(table = "BYGV80", 
+                       BYGFASE="*",
+                       ANVENDELSE="*",
+                       Tid="*",
+                       lang = "da")
+
+BYGV80 = BYGV80 %>% 
+  filter(ANVENDELSE %in% c("Parcelhuse","Etageboliger")) %>% 
+  dplyr::mutate(BYGFASE=factor(BYGFASE,levels=c("Tilladt byggeri","Påbegyndt byggeri","Byggeri under opførelse","Fuldført byggeri"))) %>% 
+  group_by(BYGFASE,ANVENDELSE)
+
+BYGV80 %>% 
+  group_by(BYGFASE,ANVENDELSE) %>%
+  dplyr::mutate(chg=value-lag(value)) %>% 
+  na.omit() %>% 
+  dplyr::mutate(chg=cumsum(chg)) %>% 
+  dplyr::mutate(ema=TTR::EMA(chg,n=9)) %>% 
+  ungroup() %>% 
+  arrange(BYGFASE,ANVENDELSE,TID) %>% 
+  filter(TID>=ymd("2000-01-01")) %>% 
+  ggplot(.,aes(x=TID,y=ema,color=ANVENDELSE)) +
+  geom_line() +
+  facet_wrap(~BYGFASE,scales = "free",ncol=1) +
+  geom_hline(yintercept = 0) +
+  theme_money_printer_go_brrr(base_size=12) +
+  geom_vline(xintercept = c(ymd("2005-04-01","2021-01-01"))) +
+  geom_vline(xintercept = c(ymd("2006-06-01","2022-03-31")),linetype=3) +
+  labs(title="Denmark: Rolling Sum of Changes",
+       x=NULL,
+       y=NULL,
+       caption = timestamp_caption())
+
+
+```
+
+
+## Backlog
+
+```{r}
+
+BYGV80 %>% 
+  group_by(BYGFASE,ANVENDELSE) %>% 
+  arrange(BYGFASE,ANVENDELSE,TID)  %>% 
+  filter(ANVENDELSE %in% c("Parcelhuse","Etageboliger")) %>% 
+  filter(BYGFASE %in% c("Tilladt byggeri","Fuldført byggeri")) %>% 
+  dplyr::mutate(value=cumsum(value)) %>% 
+  spread(BYGFASE,value) %>% 
+  dplyr::mutate(backlog=`Tilladt byggeri`-`Fuldført byggeri`) %>% 
+  dplyr::mutate(backlog=scale(backlog,center=TRUE,scale=TRUE)) %>% 
+  ggplot(.,aes(x=TID,y=backlog,color=ANVENDELSE)) +
+  geom_point(size=0.7) +
+  # geom_smooth(span=0.25) +
+  theme(legend.position = "bottom") +
+  geom_hline(yintercept = 0,linetype=2) +
+  theme_money_printer_go_brrr(base_size=12) +
+  geom_vline(xintercept = c(ymd("2005-04-01","2021-01-01"))) +
+  geom_vline(xintercept = c(ymd("2006-06-01","2022-03-31")),linetype=3) +
+  labs(title="Denmark: Backlog of Construction (Permits % Completed)",
+       x=NULL,
+       y="(SD)",
+       caption = timestamp_caption())
+
+```
+
+```{r}
+
+BYGV80 %>% 
+  group_by(BYGFASE,ANVENDELSE) %>% 
+  arrange(BYGFASE,ANVENDELSE,TID)  %>% 
+  filter(ANVENDELSE %in% c("Parcelhuse","Etageboliger")) %>% 
+  filter(BYGFASE %in% c("Byggeri under opførelse","Fuldført byggeri")) %>% 
+  # dplyr::mutate(value=cumsum(value)) %>% 
+  spread(BYGFASE,value) %>% 
+  dplyr::mutate(backlog=`Byggeri under opførelse`-`Fuldført byggeri`) %>% 
+  dplyr::mutate(backlog=scale(backlog,center=TRUE,scale=TRUE)) %>% 
+  ggplot(.,aes(x=TID,y=backlog,color=ANVENDELSE)) +
+  geom_point(size=0.7) +
+  # geom_smooth(span=0.25) +
+  theme(legend.position = "bottom") +
+  labs(title="Backlog: 'Byggeri under opførelse' - 'Fuldført Byggeri'") +
+  scale_x_date(date_breaks = "2 years",date_labels = "%Y") +
+  geom_hline(yintercept = 0,linetype=2)  +
+  theme_money_printer_go_brrr(base_size=12) +
+  geom_vline(xintercept = c(ymd("2005-04-01","2021-01-01"))) +
+  geom_vline(xintercept = c(ymd("2006-06-01","2022-03-31")),linetype=3) +
+  labs(title="Denmark: Backlog of Construction (Started % Completed)",
+       x=NULL,
+       y="(SD)",
+       caption = timestamp_caption())
+
+```
+
+## Construction Employment
+
+```{r }
+BYG1_meta <- dst_meta(table = "BYG1", lang = "da")
+BYG1 <- dst_get_data(table = "BYG1", 
+                       BRANCHE07="*",
+                       SÆSON="*",
+                       ART="*",
+                       Tid="*",
+                       lang = "da")
+
+BYG1 %>% 
+  filter(BRANCHE07=="F Bygge og anlæg") %>% 
+  filter(SÆSON=="Sæsonkorrigeret") %>% 
+  filter(ART %in% c("I alt","Nybyggeri og tilbygning i alt","Reparation og vedligeholdelse i alt")) %>% 
+  group_by(BRANCHE07,SÆSON,ART) %>% 
+  arrange(BRANCHE07,SÆSON,ART,TID) %>% 
+  # dplyr::mutate(index=100*value/first(value)) %>% 
+  dplyr::mutate(value=scale(value,center=TRUE,scale = TRUE)) %>% 
+  ggplot(.,aes(x=TID,y=value,color=ART)) +
+  geom_point(size=0.3) +
+  geom_smooth(span=0.17) +
+  theme(legend.position = "bottom") +
+  geom_hline(yintercept = 0,linetype=2)  +
+  theme_money_printer_go_brrr(base_size=12) +
+  labs(title="Denmark: Construction Employment",
+       x=NULL,
+       y="(SD)",
+       caption = timestamp_caption())
+  
 ```
 
 # Denmark House Prices
-
-```{r }
-library(pacman)
-pacman::p_load(tidyr,dplyr,ggplot2,boot,openxlsx,lubridate,forcats,broom,purrr,caret,glue,devtools,dkstat,httr,rvest,zoo)
-source(file = "money_theme.R")
-```
 
 ```{r}
 df =
@@ -749,3 +1243,164 @@ df_m2price %>%
   geom_vline(xintercept = c(ymd("2005-07-01"),ymd("2021-06-01")),linetype=2,color="red")
 
 ```
+
+
+# Denmark: Building Occupation
+
+```{r }
+BOL101_meta <- dst_meta(table = "BOL101", lang = "da")
+BOL101 <- dst_get_data(table = "BOL101", 
+                       OMRÅDE=c("Hele landet","Lyngby-Taarbæk"),
+                       BEBO=c("Boliger med CPR tilmeldte personer (beboede boliger)",
+                              "Boliger uden CPR tilmeldte personer (ubeboede boliger)"),
+                       ANVENDELSE=c("Parcel/Stuehuse",
+                                    "Række-, kæde- og dobbelthuse",
+                                    "Etageboliger"),
+                       UDLFORH=c("Beboet af ejer",
+                                 "Beboet af lejer",
+                                 "Ikke benyttet bolig"),
+                       EJER=c("Privatpersoner inkl I/S",
+                              "Almene boligselskaber",
+                              "A/S, ApS og andre selskaber"),
+                       OPFØRELSESÅR="*",
+                       Tid="*",
+                       lang = "da")
+
+```
+
+```{r}
+
+df_BOL101 = 
+  BOL101 %>% 
+  group_by(OMRÅDE,TID,ANVENDELSE,BEBO) %>% 
+  dplyr::summarise(value=sum(value)) %>% 
+  # dplyr::mutate(value=scale(value)) %>% 
+  ungroup()
+
+df_BOL101 %>% 
+  filter(OMRÅDE=="Hele landet") %>% 
+  ggplot(.,aes(x=TID,y=value,color=BEBO)) +
+  geom_line() +
+  facet_wrap(~ANVENDELSE+BEBO,scales="free") +
+  theme(legend.position="bottom") +
+  theme_money_printer_go_brrr(base_size=12) 
+```
+
+## Ratio
+
+```{r}
+
+df_BOL101 = 
+  BOL101 %>% 
+  group_by(OMRÅDE,TID,ANVENDELSE,BEBO) %>% 
+  dplyr::summarise(value=sum(value)) %>% 
+  # dplyr::mutate(value=scale(value)) %>% 
+  ungroup()
+
+df_BOL101 %>% 
+  spread(BEBO,value) %>% 
+  dplyr::mutate(ratio=`Boliger med CPR tilmeldte personer (beboede boliger)`/`Boliger uden CPR tilmeldte personer (ubeboede boliger)`) %>% 
+  ggplot(.,aes(x=TID,y=ratio,color=ANVENDELSE)) +
+  geom_line() +
+  facet_wrap(~OMRÅDE,scales="free") +
+  theme(legend.position="bottom") +
+  theme_money_printer_go_brrr(base_size=12) 
+```
+
+
+
+```{r}
+
+df =
+  openxlsx::read.xlsx(xlsxFile = "Data/BM010.xlsx",startRow = 3) %>% 
+  rename_with(~c("PROPERTY_TYPE","SALES_TYPE","ZIP"),1:3) %>% 
+  tidyr::fill(PROPERTY_TYPE,.direction="down") %>% 
+  tidyr::fill(SALES_TYPE,.direction="down") %>% 
+  tidyr::fill(ZIP,.direction="down") %>% 
+  gather(DATE,VALUE,c(4:ncol(.))) %>% 
+  filter(!VALUE=="..") %>% 
+  dplyr::mutate(VALUE=as.integer(VALUE)) %>% 
+  dplyr::mutate(DATE=lubridate::ceiling_date(as.Date(as.yearqtr(DATE, format = "%YK%q")),"quarters")-days(1))
+
+df_m2price = 
+  df %>% 
+  # filter(ZIP=="2800 Kgs.Lyngby") %>% 
+  filter(SALES_TYPE=="Realiseret handelspris") %>% 
+  dplyr::select(ZIP,DATE,SALES_TYPE,VALUE,PROPERTY_TYPE) %>% 
+  dplyr::rename(STAT=SALES_TYPE)
+
+```
+
+```{r}
+
+source_url = "https://finansdanmark.dk/tal-og-data/boligstatistik/obligationsrenter/"
+current_url = xml2::read_html(source_url) %>%
+  html_node("body > main > div > div.page-header > div.page-header__content > div > div.row > div.col-12.col-md-8 > div > p:nth-child(11) > a") %>% 
+  rvest::html_attr("href")
+xlsx_url = paste0("https://finansdanmark.dk/",current_url)
+
+df_interest = openxlsx::read.xlsx(xlsxFile = xlsx_url,startRow = 1)
+df_interest$År[1] = 1997
+df_interest = df_interest %>% fill(År,.direction = "down")
+df_interest$Date = as.Date(paste(df_interest$År, df_interest$Uge, 1, sep="-"), "%Y-%U-%u")
+df_interest = 
+  df_interest %>% 
+  dplyr::select(Date,Kort.rente,Lang.rente) %>% 
+  dplyr::mutate( CurveLongShort = Lang.rente - Kort.rente ) %>% 
+  gather(RATE_TYPE,RATE_VALUE,Kort.rente:CurveLongShort) %>% 
+  dplyr::rename(DATE=Date) %>% 
+  group_by(RATE_TYPE) %>% 
+  tidyr::complete(DATE = seq.Date(from = min(DATE,na.rm=T), to = max(DATE,na.rm=T), by="day")) %>% 
+  tidyr::fill(RATE_VALUE,.direction="downup") 
+  
+
+```
+
+
+```{r }
+
+df_m2price %>% 
+  filter(ZIP %in% c("Lyngby-Taarbæk")) %>% 
+  inner_join( df_interest ) %>% 
+  filter(RATE_TYPE %in% c("Kort.rente","Lang.rente")) %>% 
+  dplyr::mutate(RATE_BURDEN=VALUE*(RATE_VALUE/100)) %>% 
+  ggplot(.,aes(x=DATE,y=RATE_BURDEN,color=PROPERTY_TYPE)) +
+  geom_line() +
+  facet_wrap(~RATE_TYPE,ncol=1) +
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  geom_hline(yintercept = 0,linetype=2) +
+  theme_money_printer_go_brrr(base_size=12)  +
+  labs(title="Boligbyrde: DK Interest Payment per SQMT",
+       x="Date",
+       y="DKK",
+       caption = timestamp_caption()
+       )
+
+```
+
+## Household income 30%
+
+
+```{r fig.width=10,fig.height=10}
+#```{r }
+
+df_m2price %>% 
+  filter(ZIP %in% c("Lyngby-Taarbæk")) %>% 
+  inner_join( df_interest ) %>% 
+  filter(RATE_TYPE %in% c("Kort.rente","Lang.rente")) %>% 
+  dplyr::mutate(RATE_BURDEN=180*VALUE*(RATE_VALUE/100)) %>% 
+  dplyr::mutate(RATE_BURDEN=RATE_BURDEN/(1/3)) %>% 
+  ggplot(.,aes(x=DATE,y=RATE_BURDEN,color=PROPERTY_TYPE)) +
+  geom_line() +
+  facet_wrap(~RATE_TYPE,ncol=1) +
+  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
+  geom_hline(yintercept = 0,linetype=2) +
+  theme_money_printer_go_brrr(base_size=12)  +
+  labs(title="Boligbyrde: DK Interest Payment per SQMT",
+       x="Date",
+       y="DKK",
+       caption = timestamp_caption()
+       )
+
+```
+
