--- a/2_Indicators.Rmd
+++ b/2_Indicators.Rmd
@@ -556,10 +556,14 @@ summary(lm_aic)
 predict(lm_aic,
         data.frame(MSPUS=450000,
                    PCE=17000,
+                   DFF=5,
                    DGS10=3.76,
+                   CSUSHPINSA=298,
                    M2SL=21000,
+                   UNRATE=4,
                    DGS20=4.05,
                    DTWEXBGS=123,
+                   DGS30=4,
                    T10Y2Y=-0.75
   ),interval="prediction")
 
@@ -569,7 +573,11 @@ predict(lm_aic,
                    PCE=17000,
                    DGS10=4.25,
                    M2SL=19000,
+                   CSUSHPINSA=230,
                    DGS20=4.05,
+                   DFF=5,
+                   UNRATE=7,
+                   DGS30=4,
                    DTWEXBGS=123,
                    T10Y2Y=-0.75
   ),interval="prediction")
