--- a/3_Markets.Rmd
+++ b/3_Markets.Rmd
@@ -51,6 +51,7 @@ options(warn=-1)
 source("money_theme.R")
 
 ```
+
 ```{r}
 
 readRenviron(path = "Renviron.site")
@@ -99,7 +100,7 @@ draw_chart = function(data,width_=1) {
     geom_line(aes(x=Date,y=SMA_730),linetype=2,color="red",size=1.5) +
     scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
     geom_vline(xintercept = Sys.Date(),linetype=2,color="gray50") +
-    theme_i_like_the_stock(base_size = 30)
+    theme_money_printer_go_brrr(base_size = 30)
 }
 ```
 
@@ -273,316 +274,6 @@ df_yield_checkboard =
   dplyr::select(series_id,joined_series,date,spread,label) %>% 
   dplyr::mutate(series_id=factor(series_id,levels=order_),
                 joined_series=factor(joined_series,levels=order_))
-```
-
-
-```{r}
-
-predict_by_yields = function(data)  {
-
-    df_values = 
-      data %>% 
-      dplyr::select(Date,Value) %>%
-      tidyr::complete(Date=seq.Date(from=min(Date,na.rm=T),to=max(Date,na.rm=T),by="1 day")) %>% 
-      tidyr::fill(Value,.direction = "down")
-    
-    df_predicting = df_yield_checkboard %>% 
-      filter(series_id!=joined_series) %>% 
-      dplyr::mutate(one_year_ahead=date+years(1)) %>% 
-      left_join(df_values,by=c("one_year_ahead"="Date")) %>% 
-      unite(series_id,series_id,joined_series) %>% 
-      dplyr::select(date,series_id,spread,Value) %>% 
-      spread(series_id,spread)
-    
-    df_predicting_1 = df_yield_checkboard %>% 
-      filter(series_id!=joined_series) %>% 
-      dplyr::mutate(one_year_ahead=date+months(1)) %>% 
-      left_join(df_values,by=c("one_year_ahead"="Date")) %>% 
-      unite(series_id,series_id,joined_series) %>% 
-      dplyr::select(date,series_id,spread,Value) %>% 
-      spread(series_id,spread)
-    df_predicting_3 = df_yield_checkboard %>% 
-      filter(series_id!=joined_series) %>% 
-      dplyr::mutate(one_year_ahead=date+months(3)) %>% 
-      left_join(df_values,by=c("one_year_ahead"="Date")) %>% 
-      unite(series_id,series_id,joined_series) %>% 
-      dplyr::select(date,series_id,spread,Value) %>% 
-      spread(series_id,spread)
-    df_predicting_6 = df_yield_checkboard %>% 
-      filter(series_id!=joined_series) %>% 
-      dplyr::mutate(one_year_ahead=date+months(6)) %>% 
-      left_join(df_values,by=c("one_year_ahead"="Date")) %>% 
-      unite(series_id,series_id,joined_series) %>% 
-      dplyr::select(date,series_id,spread,Value) %>% 
-      spread(series_id,spread)
-    df_predicting_12 = df_yield_checkboard %>% 
-      filter(series_id!=joined_series) %>% 
-      dplyr::mutate(one_year_ahead=date+months(12)) %>% 
-      left_join(df_values,by=c("one_year_ahead"="Date")) %>% 
-      unite(series_id,series_id,joined_series) %>% 
-      dplyr::select(date,series_id,spread,Value) %>% 
-      spread(series_id,spread)
-    
-    fit_rf_1 = caret::train(x = df_predicting_1 %>% 
-                                  na.omit %>% 
-                                  dplyr::select(-date,-Value) %>% 
-                                  data.frame(),
-                             y = df_predicting_1 %>% 
-                               na.omit %>% 
-                               .[["Value"]],
-                             method = "rf",
-                             tuneGrid=tune_grid,
-                             ntree=num_trees,
-                             metric = "RMSE",
-                             trControl=train_control)
-    fit_rf_3 = caret::train(x = df_predicting_3 %>% 
-                                  na.omit %>% 
-                                  dplyr::select(-date,-Value) %>% 
-                                  data.frame(),
-                             y = df_predicting_3 %>% 
-                               na.omit %>% 
-                               .[["Value"]],
-                             method = "rf",
-                             tuneGrid=tune_grid,
-                             ntree=num_trees,
-                             metric = "RMSE",
-                             trControl=train_control)
-    fit_rf_6 = caret::train(x = df_predicting_6 %>% 
-                                  na.omit %>% 
-                                  dplyr::select(-date,-Value) %>% 
-                                  data.frame(),
-                             y = df_predicting_6 %>% 
-                               na.omit %>% 
-                               .[["Value"]],
-                             method = "rf",
-                             tuneGrid=tune_grid,
-                             ntree=num_trees,
-                             metric = "RMSE",
-                             trControl=train_control)
-    fit_rf_12 = caret::train(x = df_predicting_12 %>% 
-                                  na.omit %>% 
-                                  dplyr::select(-date,-Value) %>% 
-                                  data.frame(),
-                             y = df_predicting_12 %>% 
-                               na.omit %>% 
-                               .[["Value"]],
-                             method = "rf",
-                             tuneGrid=tune_grid,
-                             ntree=num_trees,
-                             metric = "RMSE",
-                             trControl=train_control)
-    
-    df_predicted =
-      df_predicting %>% 
-      dplyr::mutate(pred_value_1=predict(fit_rf_1,.),
-                    pred_value_3=predict(fit_rf_3,.),
-                    pred_value_6=predict(fit_rf_6,.),
-                    pred_value_12=predict(fit_rf_12,.)) %>% 
-      dplyr::select(date,pred_value_1,pred_value_3,pred_value_6,pred_value_12,Value) %>% 
-      gather(dates,val,pred_value_1 : pred_value_12) %>% 
-      separate(dates,into=c("pred","stop","change")) %>% 
-      unite(pred,pred,stop) %>% 
-      dplyr::mutate(date=date+months(as.numeric(change))) %>%
-      # gather(pred,val,pred_value:Value) %>%
-      tidyr::crossing(one_year=c(TRUE,FALSE)) %>% 
-      dplyr::mutate(date=ifelse(one_year,
-                                ifelse(date>=Sys.Date()-years(1),date,NA),date)) %>% 
-      filter(!is.na(date)) %>% 
-      dplyr::mutate(date=as.Date(date,origin="1970-01-01"))
-    
-    return(df_predicted)
-}
-
-```
-
-```{r echo=FALSE}
-
-    df_STOCKS_SP500 = predict_by_yields(data = df_gspc)
-    df_STOCKS_NASDAQCOM = predict_by_yields(data = df_NASDAQ)
-    df_STOCKS_C25 = predict_by_yields(data = df_C25)
-    df_STOCKS_BTCUSD = predict_by_yields(data = df_BTCUSD)
-    # df_STOCKS_ENERGY = predict_by_yields(data = df_iShares_SP500_ENERGY)
-    # df_STOCKS_DISCRETIONARIES = predict_by_yields(data = df_iShares_SP500_CDISCRETIONARIES)
-    # df_STOCKS_FINANCIALS = predict_by_yields(data = df_iShares_SP500_FINANCIALS)
-    # df_STOCKS_COMMUNICATION = predict_by_yields(data = df_iShares_SP500_COMMUNICATION)
-    # df_STOCKS_HEALTHCARE = predict_by_yields(data = df_iShares_SP500_HEALTHCARE)
-    # df_STOCKS_SMALLCAP = predict_by_yields(data = df_iShares_SP500_SMALLCAP)
-    # df_STOCKS_TECHNOLOGY = predict_by_yields(data = df_iShares_SP500_TECHNOLOGY)
-    df_STOCKS_GOLD = predict_by_yields(data = df_GOLD)
-    df_STOCKS_OIL = predict_by_yields(data = df_OIL)
-    df_STOCKS_TLT = predict_by_yields(data = df_TLT)
-    df_STOCKS_DXY = predict_by_yields(data = df_DXY)
-    df_STOCKS_VIX = predict_by_yields(data = df_VIX)
-    df_STOCKS_EURUSD = predict_by_yields(data = df_EURUSD) 
-    # df_STOCKS_EURAED = predict_by_yields(data = df_EURAED) 
-    # df_STOCKS_USDDKK = predict_by_yields(data = df_USDDKK) 
-    # df_STOCKS_JPYDKK = predict_by_yields(data = df_JPYDKK) 
-    # df_STOCKS_CHFDKK = predict_by_yields(data = df_CHFDKK) 
-    
-```
-
-# Summary
-
-```{r}
-
-draw_charts = function(data) {
-  
-  ath = data %>% filter(pred=="Value") %>% pull(val) %>% max(na.rm=T)
-  atl = data %>% filter(pred=="Value") %>% pull(val) %>% min(na.rm=T)
-  p1 = data %>%
-        filter(!one_year) %>% 
-        # gather(pred,val,pred_glm) %>% 
-        ggplot(.,aes(x=date,y=val,color=change,group=change)) +
-        geom_line() +
-        scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
-        scale_y_continuous(breaks = seq(0,1000000,100)) +
-        theme(axis.text.x=element_text(angle=45,hjust=1))  +
-        geom_vline(xintercept = Sys.Date(),linetype=2) +
-        add_fomc_meeting_dates() +
-        fit_draw_fibonacci(low = atl,high = ath) +
-        theme_i_like_the_stock(base_size = 12) +
-        labs(x=NULL,
-             y="(%)",
-             caption = timestamp_caption())
-  p2 = data %>%
-        filter(one_year) %>% 
-        # gather(pred,val,pred_glm) %>% 
-        ggplot(.,aes(x=date,y=val,color=change,group=change)) +
-        geom_line() +
-        scale_x_date(date_breaks = "1 month",date_labels = "%b") +
-        scale_y_continuous(breaks = seq(0,1000000,100)) +
-        theme(axis.text.x=element_text(angle=45,hjust=1))  +
-        geom_vline(xintercept = Sys.Date(),linetype=2) +
-        add_fomc_meeting_dates() +
-        fit_draw_fibonacci(low = atl,high = ath) +
-        theme_i_like_the_stock(base_size = 12) +
-        labs(x=NULL,
-             y="(%)",
-             caption = timestamp_caption())
-  
-  p3 = data %>% 
-    filter(pred=="pred_value") %>% 
-    filter(!one_year) %>% 
-    filter(date>=Sys.Date()) %>% 
-    filter(date<=Sys.Date()+days(14)) %>% 
-    dplyr::mutate(value_chg=val/lag(val)-1) %>% 
-    # dplyr::mutate(date=factor(date)) %>% 
-    ggplot(.,aes(x=change,y=date,fill=value_chg)) +
-    geom_tile() +
-    geom_text(aes(label=paste0(scales::number(val,accuracy = 1)," (",scales::percent(value_chg,accuracy = 0.1),")")),color="white") +
-    scale_y_date(date_breaks = "1 day",date_labels = "%a %d %b") +
-    theme_i_like_the_stock(base_size = 12)
-  
-  p4 = data %>% 
-    filter(pred=="pred_value") %>% 
-    filter(!one_year) %>% 
-    filter(date>=Sys.Date()) %>% 
-    dplyr::mutate(value_chg=val/first(val)-1) %>% 
-    ggplot(.,aes(x=date,y=value_chg,color=change,group=change)) +
-    geom_line() +
-    scale_x_date(date_breaks = "1 month",date_labels = "%b") +
-    scale_y_continuous(labels = scales::percent) +
-    theme(axis.text.x=element_text(angle=45,hjust=1))  +
-    geom_vline(xintercept = Sys.Date(),linetype=2) +
-    add_fomc_meeting_dates() +
-    # fit_draw_fibonacci(low = atl,high = ath) +
-    theme_i_like_the_stock(base_size = 12) +
-    labs(x=NULL,
-         y="(%)",
-         caption = timestamp_caption())
-    
-  
-  print( p1 )
-  print( p2 )
-  print( p3 )
-  print( p4 )
-  
-}
-
-```
-
-
-```{r eval=F}
-
-
-current_value = df_STOCKS_SP500 %>% filter(Sys.Date()-Date==min(Sys.Date()-Date)) %>% pull(Value)
-ath_value = max(df_STOCKS_SP500$Value)
-gap_to_ath = (current_value/ath_value)-1
-df_predict_SP500
-
-```
-
-
-## SP500
-
-```{r  }
-draw_charts(data = df_STOCKS_SP500)
-```
-
-## NASDAQ
-
-```{r  }
-draw_charts(data = df_STOCKS_NASDAQCOM)
-```
-
-## C25
-
-```{r  }
-draw_charts(data = df_STOCKS_C25)
-```
-
-## BTC-USD
-
-```{r  }
-draw_charts(data = df_STOCKS_BTCUSD)
-```
-
-## GOLD
-
-```{r  }
-draw_charts(data = df_STOCKS_GOLD)
-```
-
-## OIL
-
-```{r  }
-draw_charts(data = df_STOCKS_OIL)
-```
-
-## TLT
-
-```{r  }
-draw_charts(data = df_STOCKS_TLT)
-```
-
-## DXY
-
-```{r  }
-draw_charts(data = df_STOCKS_DXY)
-```
-
-## VIX
-
-```{r  }
-draw_charts(data = df_STOCKS_VIX)
-```
-
-## EUR/USD
-
-```{r  }
-draw_charts(data = df_STOCKS_EURUSD)
-```
-
-## JPY/DKK
-
-```{r eval=F }
-draw_charts(data = df_STOCKS_JPYDKK)
-```
-
-## CHF/DKK
-
-```{r eval=F }
-draw_charts(data = df_STOCKS_CHFDKK)
 ```
 
 # Technical Analysis
@@ -767,7 +458,7 @@ df_quotes %>%
   ggplot(.,aes(x=Sector,y=Market_Cap)) +
   geom_col() +
   coord_flip() +
-  theme_i_like_the_stock(base_size = 30) +
+  theme_money_printer_go_brrr(base_size = 30) +
   labs(title="Market Cap by Sector",
        caption=timestamp_caption(),
        y="Market Cap (Billions)",
@@ -789,7 +480,7 @@ df_quotes %>%
   # theme(axis.text.y = element_text(size=2)) +
   geom_col() +
   coord_flip() +
-  theme_i_like_the_stock(base_size = 30) +
+  theme_money_printer_go_brrr(base_size = 30) +
   labs(title="Market Cap by Industry",
        caption=timestamp_caption(),
        y="Market Cap (Billions)",
@@ -812,7 +503,7 @@ df_quotes %>%
   coord_flip() +
   facet_wrap(~Sector,ncol=1,scales="free") +
   scale_x_discrete(labels = function(x) gsub("Technology|Consumer Services|Capital Goods|Health Care|Miscellaneous|Consumer Non-Durables|Energy|Finance|Basic Industries|Public Utilities|Transportation||Consumer Durables", "", x)) +
-  theme_i_like_the_stock(base_size = 25) +
+  theme_money_printer_go_brrr(base_size = 25) +
   labs(title="Market Cap by Sector",
        caption=timestamp_caption(),
        y="Market Cap (Billions)",
@@ -839,7 +530,7 @@ df_quotes %>%
   geom_line() +
   facet_wrap(~Sector,scales="free_y") +
   geom_hline(yintercept = 1,linetype=2) + 
-  theme_i_like_the_stock(base_size = 25) +
+  theme_money_printer_go_brrr(base_size = 25) +
   theme(legend.position="null")
 
 
@@ -944,7 +635,7 @@ df_gamed %>%
   ggplot(.,aes(x=Days_Since_Shift,y=Growth,color=Sector)) +
   geom_line(aes(color=Sector),size=2) +
   geom_hline(yintercept = 0,linetype=2) +
-  theme_i_like_the_stock(base_size = 30) +
+  theme_money_printer_go_brrr(base_size = 30) +
   theme(legend.position="bottom") +
   facet_wrap(~Trend,ncol=1,scales = "free_y")  +
   geom_text(aes(label=Label),vjust=1,size=10)
@@ -968,7 +659,7 @@ df_gamed %>%
   geom_line(size=1.5) +
   # geom_line(aes(x=Date,y=VALUE)) +
   # geom_smooth() +
-  theme_i_like_the_stock(base_size = 30) +
+  theme_money_printer_go_brrr(base_size = 30) +
   theme(legend.position = "bottom") +
   geom_hline(yintercept = 0,linetype=2)
 ```
@@ -983,7 +674,7 @@ df_gamed %>%
   geom_line() +
   # geom_line(aes(x=Date,y=VALUE)) +
   # geom_smooth() +
-  theme_i_like_the_stock(base_size = 30) +
+  theme_money_printer_go_brrr(base_size = 30) +
   theme(legend.position = "bottom") +
   geom_hline(yintercept = 0,linetype=2)
 ```
@@ -1053,7 +744,7 @@ df_elo_calculation_all_dates %>%
   ungroup() %>% 
   ggplot(.,aes(x=Date,y=Rating,color=Player)) +
   geom_line() +
-  theme_i_like_the_stock(base_size = 30) +
+  theme_money_printer_go_brrr(base_size = 30) +
   geom_hline(yintercept = 50,linetype=2)  +
   geom_text(aes(label=Label),vjust=1)
 
@@ -1066,7 +757,7 @@ df_elo_calculation_all_dates %>%
   ungroup() %>% 
   ggplot(.,aes(x=Date,y=Rating,color=Player)) +
   geom_line() +
-  theme_i_like_the_stock(base_size = 30) +
+  theme_money_printer_go_brrr(base_size = 30) +
   geom_hline(yintercept = 50,linetype=2)  +
   geom_text(aes(label=Label),vjust=1,size=5)
 
