--- a/vignettes/14_BoligsalgLyngby.Rmd
+++ b/vignettes/14_BoligsalgLyngby.Rmd
@@ -141,7 +141,7 @@ df_boligsiden
 
 ```{r}
 df.house_prices =
-  openxlsx::read.xlsx(xlsxFile = "Data/BM010.xlsx",startRow = 3,sheet = "BM010") %>% 
+  openxlsx::read.xlsx(xlsxFile = "vignettes/Data/BM010.xlsx",startRow = 3,sheet = "BM010") %>% 
   rename_with(~c("PROPERTY_TYPE","SALES_TYPE","ZIP"),1:3) %>% 
   tidyr::fill(PROPERTY_TYPE,.direction="down") %>% 
   tidyr::fill(SALES_TYPE,.direction="down") %>% 
@@ -177,7 +177,23 @@ df_lyngby_rbind = do.call("rbind",df_lyngby)
 
 
 ```{r}
-df_lyngby_rbind = readRDS(file = "df_lyngby_rbind.rds")
+df_lyngby_rbind = readRDS(file = "vignettes/Data/df_lyngby_rbind.rds")
+```
+
+```{r}
+
+df_lyngby_rbind %>% 
+  # filter(sales_date>=ymd("2020-01-01")) %>% 
+  # filter(sales_date<=ymd("2021-01-01")) %>% 
+  # filter(property_type=="Villa") %>% 
+  filter(m2_price<=100000) %>% 
+  ggplot(.,aes(x=sales_date,y=m2_price,color=property_type)) +
+  geom_point() +
+  geom_smooth() +
+  geom_vline(xintercept = ymd("2020-01-01","2021-01-01"),linetype=2,size=1.5,color="red") +
+  geom_vline(xintercept = ymd("2020-06-01"),linetype=2,size=1.5,color="blue") +
+  scale_y_continuous(breaks = 10000*seq(10)) +
+  geom_vline(xintercept = Sys.Date())
 ```
 
 
